# omnilens

./: .gitignore  .windsurfrules  Cargo.toml  README.md
.github/workflows/: release.yml
crates/houndlens-cli/src/commands/: analyze.rs
crates/houndlens-core/src/: lib.rs  snapshot.rs  summary.rs  tool_runner.rs  verify.rs
crates/omnilens-cli/: Cargo.toml
crates/omnilens-cli/src/: main.rs
crates/omnilens-cli/src/commands/: analyze.rs  check.rs  fix.rs  graph.rs  impact.rs  index.rs  init.rs  invariants.rs  mod.rs  query.rs  serve.rs  status.rs  testgen.rs  trace.rs  verify.rs
crates/omnilens-core/: Cargo.toml
crates/omnilens-core/src/: ai.rs  config.rs  engine.rs  frontend.rs  invariants.rs  lib.rs  manifest.rs  semantic_diff.rs  snapshot.rs  summary.rs  verify.rs
crates/omnilens-frontend-python/: Cargo.toml
crates/omnilens-frontend-python/src/: lib.rs  parser.rs
crates/omnilens-frontend-rust/: Cargo.toml
crates/omnilens-frontend-rust/src/: lib.rs  parser.rs
crates/omnilens-frontend-typescript/: Cargo.toml
crates/omnilens-frontend-typescript/src/: lib.rs  parser.rs
crates/omnilens-graph/: Cargo.toml
crates/omnilens-graph/src/: impact.rs  lib.rs  linker.rs  query.rs
crates/omnilens-index/: Cargo.toml
crates/omnilens-index/src/: lib.rs
crates/omnilens-ir/: Cargo.toml
crates/omnilens-ir/src/: contract.rs  edge.rs  invariant.rs  lib.rs  node.rs  types.rs
crates/omnilens-lsp/: Cargo.toml
crates/omnilens-lsp/src/: lib.rs
crates/omnilens-plugin/: Cargo.toml
crates/omnilens-plugin/src/: lib.rs
crates/omnilens-query/: Cargo.toml
crates/omnilens-query/src/: lib.rs
crates/omnilens-runtime/: Cargo.toml
crates/omnilens-runtime/src/: lib.rs
crates/omnilens-storage/: Cargo.toml
crates/omnilens-storage/src/: lib.rs
crates/omnilens-testgen/: Cargo.toml
crates/omnilens-testgen/src/: lib.rs
docs/: ROADMAP.md  architecture.md  tech-decisions.md  vision.md
npm/houndlens/: README.md  package.json
npm/omnilens/: README.md  install.js  package.json
npm/omnilens-win32-x64/: package.json
