[package]
name = "omnilens-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LSP server — IDE integration with real-time verification"

[dependencies]
omnilens-core = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
