[package]
name = "omnilens-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Runtime profiler — eBPF/ETW/DTrace based tracing with semantic overlay"

[dependencies]
omnilens-ir = { workspace = true }
omnilens-graph = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
